--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -5,16 +5,14 @@
     </HEAD>
     <BODY>
         {% if id %}
-            {% for state in s_list %}
-                {% if state.id == id %}
-                    <H1>State: {{ state.name }}</H1>
-                    <H3>Cities:</H3>
-                    <UL>
-                        {% for city in state.cities | sort(attribute='name') %}
-                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                        {% endfor %}
-                    </UL>
-                {% endif %}
+            {% for state in s_list if state.id == id %}
+                <H1>State: {{ state.name }}</H1>
+                <H3>Cities:</H3>
+                <UL>
+                    {% for city in state.cities | sort(attribute='name') %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    {% endfor %}
+                </UL>
             {% endfor %}
         {% else %}
             <H1>States</H1>
