--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -13,6 +13,8 @@
                     <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                     {% endfor %}
                 </UL>
+            {% else %}
+                <H1>Not found!</H1>
             {% endfor %}
         {% else %}
             <H1>States</H1>
